# OTUS

./: CMakeLists.txt  README.md  main.cpp
2/: move_me_out.cpp
3/: CMakeLists.txt  argument.cpp  high_scores.h
5/: CMakeLists.txt  statistics.cpp
6/: CMakeLists.txt  main.cpp
7/: CMakeLists.txt  ListContainer.h  SequentialContainer.h  main.cpp
8/: CMakeLists.txt
